# ramsay

./: README.md  pyproject.toml
examples/: custom_rubric.py  generate_blog.py  generate_email.py  generate_essay.py
prompts/: generate.md  grounding.md  style.md
ramsay/: __init__.py  __main__.py  claude.py  config.py  grounding.py  pipeline.py  precheck.py  style.py
rubrics/: README.md  blog.yaml  email.yaml  essay.yaml  grant.yaml  newsletter.yaml
